--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,7 @@
 nav {
   height: 5dvh;
   width: 100%;
-  background-color: #303030;
+  background-color: #392cf7;
 }
 
 nav ul {
@@ -41,7 +41,7 @@ nav ul {
   justify-content: space-evenly;
   list-style: none;
   align-items: center;
-  background-color: #303030;
+  background-color: #392cf7;
   height: 100%;
   padding-left: 0%;
 }
@@ -57,7 +57,7 @@ nav li {
 }
 
 nav li:hover {
-  background-color: #000;
+  background-color: #7b0404;
   cursor: pointer;
 }
 
@@ -99,7 +99,7 @@ nav li:hover {
 #hero-text button {
   width: 90%;
   text-align: center;
-  background-color: rgb(0, 59, 168);
+  background-color: rgb(2, 78, 159);
   color: #fff;
   border: none;
   font-weight: bold;
@@ -107,7 +107,7 @@ nav li:hover {
 }
 
 #hero-text button:hover {
-  background-color: #000;
+  background-color: #690303;
   cursor: pointer;
 }
 
@@ -144,9 +144,9 @@ h3 {
 .img-container {
   width: 100%;
   height: 9dvh;
-  background-color: rgb(0, 59, 168);
+  background-color: rgb(125, 125, 126);
   margin-bottom: 1dvh;
-  border: #000 1px solid;
+  border: #0467f0 1px solid;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -232,7 +232,7 @@ nav a {
 
 .priceMileageContainer {
   margin-top: 1rem;
-  background-color: #303030;
+  background-color: #084fcb;
   padding: 1rem;
   color: #fff;
   display: flex;
@@ -291,8 +291,8 @@ nav a {
 }
 
 .purchaseButton {
-  background-color: rgb(67, 115, 235);
-  color: white;
+  background-color: rgb(67, 207, 235);
+  color: rgb(5, 5, 5);
   font-weight: bold;
 }
 
@@ -312,7 +312,7 @@ h1 {
 }
 
 #loginForm {
-  background-color: #303030;
+  background-color: #0f52ef;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -365,7 +365,7 @@ h1 {
 }
 
 #registerForm {
-  background-color: #303030;
+  background-color: #1f50e4;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -394,7 +394,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #2352fd;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -424,7 +424,7 @@ h1 {
 }
 
 #addClassification {
-  background-color: #303030;
+  background-color: #1667eb;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -453,7 +453,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #154af8;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -473,7 +473,7 @@ h1 {
 }
 
 #addInventory {
-  background-color: #303030;
+  background-color: #2052f4;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -508,7 +508,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #194df8;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -528,7 +528,7 @@ h1 {
 }
 
 #editInventory {
-  background-color: #303030;
+  background-color: #3455fc;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -563,7 +563,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #2466f3;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -575,7 +575,7 @@ h1 {
 }
 
 #deleteInventory {
-  background-color: #303030;
+  background-color: #2354f3;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -608,8 +608,8 @@ h1 {
 
 #deleteInventory button {
   padding: 10px 15px;
-  background-color: #fff;
-  color: #000;
+  background-color: #f30404;
+  color: #fefefe;
   border: #000;
   border-radius: 5px;
   margin-top: 20px;
@@ -622,7 +622,7 @@ h1 {
 }
 
 #updateAccount {
-  background-color: #303030;
+  background-color: #0a77e3;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -682,7 +682,7 @@ h1 {
 }
 
 #updatePassword {
-  background-color: #303030;
+  background-color: #0871e1;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -711,7 +711,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #0b68eb;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -741,7 +741,7 @@ h1 {
 }
 
 #editReview {
-  background-color: #303030;
+  background-color: #0f64f8;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -770,7 +770,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #2e7df2;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -803,7 +803,7 @@ h1 {
 }
 
 #deleteReview {
-  background-color: #303030;
+  background-color: #2574fc;
   padding: 20px;
   display: flex;
   width: 90%;
@@ -832,7 +832,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #138eec;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -865,7 +865,7 @@ h1 {
 }
 
 #reviewList {
-  border: 1px solid #303030;
+  border: 1px solid #2284f3;
   padding: 20px;
   width: 80%;
   margin: 0 auto;
@@ -891,7 +891,7 @@ h1 {
 }
 
 #reviewAdd {
-  background-color: #303030;
+  background-color: #0688eb;
   padding: 20px;
   display: flex;
   width: 80%;
@@ -920,7 +920,7 @@ h1 {
   padding: 10px 15px;
   background-color: #fff;
   color: #000;
-  border: #000;
+  border: #169ce9;
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -1037,7 +1037,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #303030;
+    background-color: #0991d5;
   }
 
   #inv-display img {
@@ -1091,7 +1091,7 @@ h1 {
 
   .priceMileageContainer {
     margin-top: 1rem;
-    background-color: #303030;
+    background-color: #0e87dd;
     padding: 1rem;
     color: #fff;
     display: flex;
